# OpenVINO_Vehicle_Plate_Detection

./: .gitignore  CMakeLists.txt  README.md
include/: video_detector.hpp
src/: main.cpp  video_detector.cpp
